--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "frontend",
     "backend"
   ],
+  "type": "module",
   "scripts": {
     "clean": "npx rimraf node_modules out",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:contract": "forge test -vvv --root backend",
     "format:contract": "forge fmt --root backend",
     "gas": "forge snapshot --root backend",
-    "format": "prettier --write '**/**/*.{ts,tsx,css}'",
+    "format": "prettier --write '**/**/*.{js,ts,tsx,css}'",
     "format:check": "prettier --check '**/**/*.{ts,tsx,js,jsx,css}'",
     "lint": "npx textlint 'README.md'",
     "lint-staged": "lint-staged",
@@ -25,6 +26,7 @@
   "author": "Susumu Tomita <oyter880@gmail.com> (https://susumutomita.netlify.app/)",
   "license": "MIT",
   "dependencies": {
+    "@tableland/sdk": "^7.2.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
