--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,64 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "@bnb-chain/greenfield-js-sdk": "^2.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@spruceid/siwe-parser": "^2.1.2",
+    "@stablelib/random": "^1.0.2",
+    "@tanstack/react-query": "^5.52.1",
+    "@vercel/analytics": "^1.3.1",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
+    "connectkit": "^1.8.2",
+    "crypto-js": "^4.2.0",
+    "encoding": "^0.1.13",
+    "ethers": "^6.13.2",
+    "focus-trap-react": "^10.2.2",
+    "formidable": "^3.5.1",
+    "framer-motion": "^11.3.30",
+    "lucide-react": "^0.435.0",
+    "ms": "^2.1.3",
+    "next": "14.2.6",
+    "next-auth": "^4.24.7",
+    "pino-pretty": "^11.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-markdown": "^8.0.7",
+    "react-moralis": "^1.4.2",
+    "siwe": "^2.3.2",
+    "tailwind-merge": "^1.14.0",
+    "use-debounce": "^9.0.4",
+    "valid-url": "^1.0.9",
+    "vaul": "^0.6.8",
+    "viem": "^2.20.0",
+    "wagmi": "^2.12.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/crypto-js": "^4.2.2",
+    "@types/ms": "^0.7.32",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
+    "@vercel/og": "^0.0.26",
+    "autoprefixer": "^10.4.16",
+    "concurrently": "^7.6.0",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^14.2.6",
+    "postcss": "^8.4.16",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "prisma": "^4.16.2",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "typescript": "^5.2.2"
   }
 }
