--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@stablelib/random": "^1.0.2",
     "@tanstack/react-query": "^5.52.1",
     "@vercel/analytics": "^1.3.1",
+    "@web3-react/core": "^8.2.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
@@ -30,10 +31,12 @@
     "focus-trap-react": "^10.2.2",
     "formidable": "^3.5.1",
     "framer-motion": "^11.3.30",
+    "groq-sdk": "^0.6.1",
     "lucide-react": "^0.435.0",
     "ms": "^2.1.3",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
+    "ollama": "^0.5.8",
     "pino-pretty": "^11.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,7 +49,8 @@
     "valid-url": "^1.0.9",
     "vaul": "^0.6.8",
     "viem": "^2.20.0",
-    "wagmi": "^2.12.7"
+    "wagmi": "^2.12.7",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
