--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@spruceid/siwe-parser": "^2.1.2",
     "@stablelib/random": "^1.0.2",
@@ -43,6 +44,7 @@
     "react-dropzone": "^14.2.3",
     "react-markdown": "^8.0.7",
     "react-moralis": "^1.4.2",
+    "react-textarea-autosize": "^8.5.3",
     "siwe": "^2.3.2",
     "tailwind-merge": "^1.14.0",
     "use-debounce": "^9.0.4",
