--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@tanstack/react-query": "^5.52.1",
     "@vercel/analytics": "^1.3.1",
     "@web3-react/core": "^8.2.3",
+    "@web3auth/core": "^4.6.0",
+    "@web3auth/modal": "^8.12.7",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
