--- a/backend/foundry.toml
+++ b/backend/foundry.toml
@@ -1,6 +1,7 @@
 [profile.default]
-src = "src"
-out = "out"
-libs = ["lib"]
-
+src = 'src'
+out = 'out'
+libs = ['lib']
+gas_price = 1000000000   # ガス価格の設定は整数で指定します
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts/contracts/"]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
