--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "formidable": "^3.5.1",
     "framer-motion": "^11.3.30",
     "groq-sdk": "^0.6.1",
+    "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.435.0",
     "ms": "^2.1.3",
     "next": "14.2.7",
